Interactive practice is now working

--- a/index.html
+++ b/index.html
@@ -61,10 +61,12 @@
                 </div>
             </form>
             <div id="practiceDiv">
-                <div id="pString" class="pDisplay"></div>
+                <input type="number" value="10" id="practiceTime">
+                <div onclick="startPractice()" id="startButton">Start</div>
+                <br><br>
                 <div id="pNote" class="pDisplay"></div>
-                <input type="number" id="practiceTime">
-                <input type="button" onclick="startPractice()">
+                <div id="pString" class="pDisplay"></div>
+                <div id="pTime" class="pDisplay"></div>
             </div>
         </div>
         <div id="main">
